--- a/app.json
+++ b/app.json
@@ -1,7 +1,8 @@
 {
   "expo": {
     "name": "weatherApp",
-    "slug": "weatherApp",
+    "slug": "weatherapp",
+    "owner": "nastiy1890",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
