--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "prop-types": "^15.8.1",
     "react": "18.0.0",
     "react-native": "0.69.4",
-    "expo-linear-gradient": "~11.4.0"
+    "expo-linear-gradient": "~11.4.0",
+    "expo-updates": "~0.14.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
